# pcd-task-1

./: README.md  main.py  pyproject.toml
src/: main.py
src/pcd_task_1/: __init__.py  gaussian_kernel.py  image.py
