[project]
name = "pcd-task-1"
version = "0.1.0"
description = ""
authors = [
    {name = "izzalDev",email = "rizal.fadlullah@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "pcd_task_1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
